# rev_lines

./: Cargo.toml  README.md
.github/workflows/: actions.yml
benches/: criterion.rs  iai.rs
examples/: raw_rev_lines.rs  rev_bytes.rs  rev_lines.rs
src/: lib.rs  tokio1.rs
tests/: blank_line_file  invalid_utf8  invalid_utf8-2  multi_line_file  non_utf8_line_file
